test/Macros/CodiraifyImport/MacroErrors/InvalidCount.code
// REQUIRES: language_language_parser

// RUN: %target-typecheck-verify-language %s -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -verify

// expected-error@+1{{no parameter with name 'foo' in '_ ptr: UnsafePointer<CInt>, _ len: CInt'}}
@_CodiraifyImport(.countedBy(pointer: .param(1), count: "foo"))
fn myFunc(_ ptr: UnsafePointer<CInt>, _ len: CInt) {
}
